# llm-code-review

./: .gitignore  .windsurfrules  README.md  pyproject.toml  requirements.txt
src/code_reviewer/: __main__.py  context_retriever.py  diff_parser.py  formatter.py  indexer.py  models.py  ollama_client.py  planner.py  prompts.py  reranker.py  test_ui_generator.py  worker.py
src/code_reviewer/evals/: code_retrieval_eval.py  test_cases.json  test_cases_symbol_lookup.json
src/code_reviewer/templates/: code_review.html.j2  comprehensive_review.html.j2
src/code_reviewer/templates/assets/: styles.css
tests/: conftest.py  test_context_retriever.py  test_indexer.py  test_planner.py  test_worker.py
tests/fixtures/test_repo/: .gitignore  app.py
tests/fixtures/test_repo/static/: style.css
tests/fixtures/test_repo/templates/: index.html
