[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated.*:DeprecationWarning:pydantic._internal._config",
    "ignore:open_text is deprecated.*:DeprecationWarning:litellm.utils",
    "ignore:There is no current event loop:DeprecationWarning:litellm.caching.llm_caching_handler",
]
pythonpath = ["src"]

[project]
name = "code-reviewer"
version = "0.0.1"
description = "A code review automation tool powered by local LLMs"
authors = [{ name = "foo", email = "your@email.com" }]
readme = ""
requires-python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["code_reviewer"]